# tools

./: .gitignore  README.md  pyproject.toml  rxconfig.py
alembic/versions/: 91863ded284a_.py
tests/: test_services.py
tests/backend/: test_authentication.py
tools/: ip_caculator.py  tools.py
tools/backend/: hello.py  manage.py
tools/backend/authentication/: clerk.py  models.py  repositories.py  services.py  views.py
tools/frontend/: core.py
tools/frontend/libs/: context.py
tools/frontend/libs/components/clerk/: __init__.py  clerk_provider.py  provider.py
tools/frontend/libs/components/clerk/authentication/: __init__.py  google_one_tap.py  sign_in.py  sign_up.py
tools/frontend/libs/components/clerk/control/: __init__.py  authenticate_with_redirect_callback.py  clerk_loaded.py  clerk_loading.py  multisession_app_support.py  protect.py  redirect_to_sign_in.py  redirect_to_sign_up.py  signed_in.py  signed_out.py
tools/frontend/libs/components/clerk/organization/: __init__.py  create_organization.py  organization_list.py  organization_profile.py  organization_switcher.py
tools/frontend/libs/components/clerk/unstyled/: __init__.py  sign_in_button.py  sign_in_with_metamask_button.py  sign_out_button.py  sign_up_button.py
tools/frontend/libs/ui/: __init__.py  logo.py
tools/frontend/routes/: index.py  layout.py
tools/frontend/routes/auth/: __init__.py  index.py  layout.py  login.py
tools/frontend/routes/auth/pages/: __init__.py  login.py
tools/frontend/routes/dashboard/: __init__.py  index.py  layout.py
(+5 files in other folders)
