[project]
name = "tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clerk-backend-api>=1.8.0",
    "httpx>=0.28.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
    "reflex>=0.7.0",
    "structlog>=25.1.0",
]

[dependency-groups]
dev = [
    "ipython>=8.32.0",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]
